fix visible mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,13 @@
   display: grid;
   align-content: start;
   gap: 35px;
-  padding: 50px 30px;
+  padding: 30px 15px;
+}
+
+@media (min-width: 768px) {
+  .App {
+    padding: 50px 30px;
+  }
 }
 
 .App__container {
@@ -13,6 +19,7 @@
 }
 
 .App__select {
+  width: 100%;
   padding: 15px;
   border-radius: 15px;
   outline: 0;
